# PBLhub

./: .gitignore  BUILD_SETUP.md  CMakeLists.txt  CONTRIBUTING.md  README.md  VIRTUAL_ENV_GUIDE.md  uv.toml
docs/: BRANCH_STANDARDS.md  BRANCH_WORKFLOW.md  PROJECT_TEMPLATE.md
projects/01-file-organizer/: main.py  requirements.txt
projects/01-hello-cmake/: CMakeLists.txt  main.cpp
projects/02-calculator-cli/: CMakeLists.txt  main.cpp
projects/02-password-generator/: main.py  requirements.txt
projects/03-expense-tracker/: main.py  requirements.txt
projects/03-file-manager/: CMakeLists.txt  main.cpp
projects/04-todo-app/: CMakeLists.txt  main.cpp
projects/04-web-scraper/: main.py
projects/05-api-client/: main.py
projects/05-memory-game/: CMakeLists.txt  main.cpp
projects/06-task-scheduler/: main.py
projects/06-text-editor/: CMakeLists.txt  main.cpp
projects/07-data-analyzer/: main.py
projects/07-http-client/: CMakeLists.txt  main.cpp
projects/08-mini-framework/: main.py
projects/08-thread-pool/: CMakeLists.txt  main.cpp
projects/09-mini-database/: CMakeLists.txt  main.cpp
projects/10-game-engine/: CMakeLists.txt  main.cpp
projects/11-screen-recorder/: ARCHITECTURE.md  CMakeLists.txt  GUI_PREVIEW.md  README.md  main.cpp
projects/11-screen-recorder/include/: recorder_application.h  recorder_gui.h  screen_recorder.h
projects/11-screen-recorder/src/: recorder_application.cpp  recorder_gui.cpp  screen_recorder.cpp
resources/: learning-notes.md  requirements.txt
tools/: build-all.sh  build-project.sh  env-manager.py  install-deps.py  project_cli.py  project_config.json  project_config.py  python.sh  run-all.py  run-project.sh  run-tests.sh  setup-env.sh  setup-uv.py  setup-venv.py  test-project.sh  update_docs.py  verify-setup.py
